examples/test/testpolicy15241.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15241
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key11: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value5
          key31: value44
          key17: value24
      podSelector:
        matchLabels:
          key29: value31
